--- a/dbutils/src/main/AndroidManifest.xml
+++ b/dbutils/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="com.uutils.db"
+<manifest package="org.xutils.db"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
