--- a/xutils/src/main/AndroidManifest.xml
+++ b/xutils/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest
-    package="org.xutils.download"
+    package="org.xutils.plugin"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
